criação das docstrings das funções em Funcoes.py

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "falling-photography",
+   "id": "foster-consolidation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "extensive-longer",
+   "id": "current-airfare",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,33 +28,34 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "nuclear-vietnam",
+   "id": "facial-activity",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sfm = signal_phase_min(M,Fb,SpS,SNR)"
+    "sfm = qam_signal_phase_min(M,Fb,SpS,SNR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "underlying-shape",
+   "id": "naval-norway",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset , X , y = dataset_01(sfm,16)"
+    "ordem = 16\n",
+    "dataset , X , y = dataset_01(sfm,ordem)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "express-curve",
+   "id": "trained-overhead",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ResampledQAM([0.91943265, 0.9634852 , 0.93844607, 0.76489932, 0.57290242])"
+       "ResampledQAM([0.64458736, 0.26220299, 0.38595612, 0.66973016, 0.9015151 ])"
       ]
      },
      "execution_count": 5,
@@ -68,61 +69,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "medieval-malta",
+   "execution_count": 6,
+   "id": "bound-magic",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.62050768, 2.41403969, 2.09766694, 1.89496915, 2.10526948,\n",
-       "       2.50641725, 2.66709954, 2.53673325, 2.53008748, 2.90268283,\n",
-       "       3.2167108 , 3.08141456, 2.69442666, 2.6834064 , 3.01225101,\n",
-       "       2.95781908])"
+       "(3000, 16)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X[0]"
+    "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "sophisticated-madonna",
+   "execution_count": 7,
+   "id": "frank-simpson",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ResampledQAM([2.62050768, 2.41403969, 2.09766694, 1.89496915, 2.10526948,\n",
-       "              2.50641725, 2.66709954, 2.53673325, 2.53008748, 2.90268283,\n",
-       "              3.2167108 , 3.08141456, 2.69442666, 2.6834064 , 3.01225101,\n",
-       "              2.95781908])"
+       "ResampledQAM([1.75026293, 2.40912927, 3.50074669, 3.91590696, 3.48752389,\n",
+       "              2.81680421, 2.68022679, 2.73184076, 2.36481513, 2.05333822,\n",
+       "              2.62211065, 3.37447393, 3.70815025, 3.81584318, 3.97718682,\n",
+       "              3.89893144])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset['amplitudes'][:16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "objective-identifier",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0446475240909066"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['phases'][15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "biblical-killing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ResampledQAM([1.04464752])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "least-arctic",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function dataset_01 in module Funcoes:\n",
+      "\n",
+      "dataset_01(sfm, ordem: int)\n",
+      "    O dataset criado pela função é o resultado de uma convolução simples ao longo\n",
+      "    do vetor das amplitudes, para a criação das features, e a fase correspondente à\n",
+      "    ultima amostras de amplitude em cada passo da convolução.\n",
+      "    \n",
+      "    Args:\n",
+      "        sfm (ResampledQAM: np.ndarray): Símbolos do sinal QAM a ser observado\n",
+      "        ordem (int): Número de amostras de amplitudes a serem observadas para a análise\n",
+      "            de uma amostra de fase\n",
+      "    \n",
+      "    Returns:\n",
+      "        data (dict[np.ndarray, np.ndarray]): Dicionário com os arrays contendo as informações de\n",
+      "            amplitudes e fases do sinal.\n",
+      "        X (np.ndarray): Matriz contendo as informações de amplitudes do sinal dispostas de tal \n",
+      "            forma que qualquer algorítmo de regressão de ML pode utilizar como features.\n",
+      "        y (np.ndarray): Vetor coluna contendo as informações de fases do sinal dispostas de tal \n",
+      "            forma que qualquer algorítmo de regressão de ML pode utilizar como features.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(dataset_01)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "similar-celtic",
+   "id": "protected-heather",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dataset['amplitudes'][:16]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
