Datasets criados de maneira correta

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "ordem = 16\n",
-    "dataset , X , y = dataset_01(sfm,ordem)"
+    "dataset , X , y = dataset_02(sfm,ordem)"
    ]
   },
   {
@@ -53,63 +53,60 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "ResampledQAM([0.64458736, 0.26220299, 0.38595612, 0.66973016, 0.9015151 ])"
+       "(60000,)"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
-    "dataset['phases'][:5]"
+    "dataset['phases'].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "bound-magic",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(3000, 16)"
+       "1.5973491536233564"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
-    "X.shape"
+    "dataset['amplitudes'][-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "frank-simpson",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "ResampledQAM([1.75026293, 2.40912927, 3.50074669, 3.91590696, 3.48752389,\n",
-       "              2.81680421, 2.68022679, 2.73184076, 2.36481513, 2.05333822,\n",
-       "              2.62211065, 3.37447393, 3.70815025, 3.81584318, 3.97718682,\n",
-       "              3.89893144])"
+       "1.5973491536233564"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
    "source": [
-    "dataset['amplitudes'][:16]"
+    "X[-1,int(ordem/2)]"
    ]
   },
   {
@@ -119,18 +116,18 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "1.0446475240909066"
+       "(60000,)"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
    "source": [
-    "dataset['phases'][15]"
+    "y.shape"
    ]
   },
   {
@@ -140,18 +137,38 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "ResampledQAM([1.04464752])"
+       "0.7187024932530832"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
-    "y[0]"
+    "y[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.7187024932530832"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "dataset['phases'][-1]"
    ]
   },
   {
@@ -193,11 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "protected-heather",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "262144"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "2**16*4"
+   ]
   }
  ],
  "metadata": {
@@ -216,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.10-final"
   }
  },
  "nbformat": 4,
