primeiro dataset 2D criado

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -43,13 +43,32 @@
    "outputs": [],
    "source": [
     "ordem = 16\n",
-    "dataset , X , y = dataset_02(sfm,ordem)"
+    "dataset , X , y = dataset_02_CNN(sfm,ordem)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "trained-overhead",
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(60000, 16, 16, 1)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -60,59 +79,36 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "source": [
-    "dataset['phases'].shape"
+    "y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bound-magic",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "1.5973491536233564"
+       "(60000,)"
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 7
     }
    ],
    "source": [
-    "dataset['amplitudes'][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "frank-simpson",
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1.5973491536233564"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
-   "source": [
-    "X[-1,int(ordem/2)]"
+    "dataset['amplitudes'].shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "objective-identifier",
    "metadata": {},
    "outputs": [
     {
@@ -127,107 +123,15 @@
     }
    ],
    "source": [
-    "y.shape"
+    "dataset['phases'].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "biblical-killing",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.7187024932530832"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "source": [
-    "y[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.7187024932530832"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "dataset['phases'][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "least-arctic",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function dataset_01 in module Funcoes:\n",
-      "\n",
-      "dataset_01(sfm, ordem: int)\n",
-      "    O dataset criado pela função é o resultado de uma convolução simples ao longo\n",
-      "    do vetor das amplitudes, para a criação das features, e a fase correspondente à\n",
-      "    ultima amostras de amplitude em cada passo da convolução.\n",
-      "    \n",
-      "    Args:\n",
-      "        sfm (ResampledQAM: np.ndarray): Símbolos do sinal QAM a ser observado\n",
-      "        ordem (int): Número de amostras de amplitudes a serem observadas para a análise\n",
-      "            de uma amostra de fase\n",
-      "    \n",
-      "    Returns:\n",
-      "        data (dict[np.ndarray, np.ndarray]): Dicionário com os arrays contendo as informações de\n",
-      "            amplitudes e fases do sinal.\n",
-      "        X (np.ndarray): Matriz contendo as informações de amplitudes do sinal dispostas de tal \n",
-      "            forma que qualquer algorítmo de regressão de ML pode utilizar como features.\n",
-      "        y (np.ndarray): Vetor coluna contendo as informações de fases do sinal dispostas de tal \n",
-      "            forma que qualquer algorítmo de regressão de ML pode utilizar como features.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(dataset_01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "protected-heather",
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "262144"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
-   "source": [
-    "2**16*4"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
