modelos atualizados após reunião de sexta feira

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -30,31 +30,31 @@
    "outputs": [],
    "source": [
     "M = 64        # ordem da modulação\n",
-    "Fb = 40e9      # taxa de símbolos\n",
+    "Fb = 24e9      # taxa de símbolos\n",
     "SpS = 4         # amostras por símbolo\n",
     "Fs = SpS*Fb    # taxa de amostragem\n",
-    "SNR = 40        # relação sinal ruído (dB)\n",
-    "rolloff = 0.01  # Rolloff do filtro formatador de pulso\n",
-    "amostras = 128\n",
-    "size = 60000"
+    "SNR = 50        # relação sinal ruído (dB)\n",
+    "rolloff = 0.05  # Rolloff do filtro formatador de pulso\n",
+    "amostras = 512\n",
+    "size = 10000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d6529cc3",
    "metadata": {},
    "outputs": [],
    "source": [
     "qam_signal = generate_signal(M,Fb,SpS,SNR)\n",
-    "sfm,A = sinal_qam_fase_min(qam_signal)\n",
+    "sfm,A = qam_signal_phase_min(qam_signal)\n",
     "data,X,y = dataset_02(sfm,amostras,size)\n",
     "X_train, y_train, X_test, y_test = train_test_datasets(X,y,size)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "89e7e519",
    "metadata": {},
    "outputs": [
@@ -63,55 +63,33 @@
      "name": "stdout",
      "text": [
       "Epoch 1/300\n",
-      "1500/1500 [==============================] - 9s 6ms/step - loss: 0.0603 - val_loss: 0.0051\n",
+      "250/250 [==============================] - 4s 13ms/step - loss: 0.1376 - val_loss: 0.0622\n",
       "Epoch 2/300\n",
-      "1500/1500 [==============================] - 7s 5ms/step - loss: 0.0051 - val_loss: 0.0043\n",
+      "250/250 [==============================] - 4s 14ms/step - loss: 0.0581 - val_loss: 0.0422\n",
       "Epoch 3/300\n",
-      "1500/1500 [==============================] - 7s 4ms/step - loss: 0.0048 - val_loss: 0.0039\n",
+      "250/250 [==============================] - 4s 14ms/step - loss: 0.0301 - val_loss: 0.0143\n",
       "Epoch 4/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0044 - val_loss: 0.0040\n",
+      "250/250 [==============================] - 4s 14ms/step - loss: 0.0108 - val_loss: 0.0080\n",
       "Epoch 5/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0041 - val_loss: 0.0034\n",
+      "250/250 [==============================] - 3s 12ms/step - loss: 0.0056 - val_loss: 0.0050\n",
       "Epoch 6/300\n",
-      "1500/1500 [==============================] - 7s 5ms/step - loss: 0.0039 - val_loss: 0.0033\n",
+      "250/250 [==============================] - 3s 12ms/step - loss: 0.0048 - val_loss: 0.0050\n",
       "Epoch 7/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0037 - val_loss: 0.0033\n",
+      "250/250 [==============================] - 3s 14ms/step - loss: 0.0044 - val_loss: 0.0045\n",
       "Epoch 8/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0036 - val_loss: 0.0031\n",
+      "250/250 [==============================] - 3s 14ms/step - loss: 0.0044 - val_loss: 0.0047\n",
       "Epoch 9/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0034 - val_loss: 0.0031\n",
+      "250/250 [==============================] - 3s 12ms/step - loss: 0.0042 - val_loss: 0.0045\n",
       "Epoch 10/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0033 - val_loss: 0.0032\n",
+      "250/250 [==============================] - 3s 12ms/step - loss: 0.0045 - val_loss: 0.0071\n",
       "Epoch 11/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0031 - val_loss: 0.0026\n",
+      "250/250 [==============================] - 3s 12ms/step - loss: 0.0046 - val_loss: 0.0045\n",
       "Epoch 12/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0030 - val_loss: 0.0026\n",
+      "250/250 [==============================] - 3s 13ms/step - loss: 0.0041 - val_loss: 0.0047\n",
       "Epoch 13/300\n",
-      "1500/1500 [==============================] - 7s 4ms/step - loss: 0.0030 - val_loss: 0.0025\n",
+      "250/250 [==============================] - 3s 13ms/step - loss: 0.0040 - val_loss: 0.0048\n",
       "Epoch 14/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0030 - val_loss: 0.0024\n",
-      "Epoch 15/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0028 - val_loss: 0.0023\n",
-      "Epoch 16/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0027 - val_loss: 0.0023\n",
-      "Epoch 17/300\n",
-      "1500/1500 [==============================] - 7s 4ms/step - loss: 0.0027 - val_loss: 0.0024\n",
-      "Epoch 18/300\n",
-      "1500/1500 [==============================] - 7s 5ms/step - loss: 0.0027 - val_loss: 0.0032\n",
-      "Epoch 19/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0027 - val_loss: 0.0025\n",
-      "Epoch 20/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0026 - val_loss: 0.0021\n",
-      "Epoch 21/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0025 - val_loss: 0.0030\n",
-      "Epoch 22/300\n",
-      "1500/1500 [==============================] - 5s 4ms/step - loss: 0.0026 - val_loss: 0.0022\n",
-      "Epoch 23/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0025 - val_loss: 0.0033\n",
-      "Epoch 24/300\n",
-      "1500/1500 [==============================] - 7s 5ms/step - loss: 0.0026 - val_loss: 0.0022\n",
-      "Epoch 25/300\n",
-      "1500/1500 [==============================] - 6s 4ms/step - loss: 0.0025 - val_loss: 0.0022\n"
+      "250/250 [==============================] - 3s 14ms/step - loss: 0.0045 - val_loss: 0.0050\n"
      ]
     }
    ],
